--- a/Hog_Jumper.csproj
+++ b/Hog_Jumper.csproj
@@ -86,5 +86,9 @@
   <ItemGroup>
     <None Include="Resources\Png.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\7.wav" />
+    <Content Include="Resources\Sound_34393800 1636125459.mp3" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
