--- a/Hog_Jumper.csproj
+++ b/Hog_Jumper.csproj
@@ -142,6 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\7.wav" />
+    <None Include="Resources\settings.png" />
     <Content Include="Resources\Sound_34393800 1636125459.mp3" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
