--- a/Hog_Jumper.csproj
+++ b/Hog_Jumper.csproj
@@ -51,6 +51,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="classes\Platforms.cs" />
+    <Compile Include="classes\Transform.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
