--- a/Hog_Jumper.csproj
+++ b/Hog_Jumper.csproj
@@ -160,6 +160,9 @@
     <None Include="Resources\7.wav" />
     <None Include="Resources\settings.png" />
     <None Include="Resources\exit.png" />
+    <None Include="Resources\play.png" />
+    <None Include="Resources\skins.png" />
+    <None Include="Resources\records.png" />
     <Content Include="Resources\Sound_34393800 1636125459.mp3" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
