--- a/Hog_Jumper.csproj
+++ b/Hog_Jumper.csproj
@@ -163,6 +163,9 @@
     <None Include="Resources\play.png" />
     <None Include="Resources\skins.png" />
     <None Include="Resources\records.png" />
+    <None Include="Resources\back.png" />
+    <None Include="Resources\registration.png" />
+    <None Include="Resources\authorization.png" />
     <Content Include="Resources\Sound_34393800 1636125459.mp3" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
