добавила картинки тем

--- a/Hog_Jumper.csproj
+++ b/Hog_Jumper.csproj
@@ -169,6 +169,8 @@
     <None Include="Resources\registration.png" />
     <None Include="Resources\authorization.png" />
     <None Include="Resources\cross_exit1.png" />
+    <None Include="Resources\dark_theme.png" />
+    <None Include="Resources\light_theme.png" />
     <None Include="Resources\backgroundMainMenu1.png" />
     <Content Include="Resources\Sound_34393800 1636125459.mp3" />
   </ItemGroup>
