--- a/Hog_Jumper.csproj
+++ b/Hog_Jumper.csproj
@@ -174,6 +174,7 @@
     <None Include="Resources\cross_exit1.png" />
     <None Include="Resources\backgroundMainMenu1.png" />
     <None Include="Resources\border.png" />
+    <None Include="Resources\border_color.png" />
     <Content Include="Resources\Sound_34393800 1636125459.mp3" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
