--- a/Hog_Jumper.csproj
+++ b/Hog_Jumper.csproj
@@ -39,6 +39,7 @@
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -56,6 +57,8 @@
     <Compile Include="classes\Platforms.cs" />
     <Compile Include="classes\Player.cs" />
     <Compile Include="classes\Transform.cs" />
+    <Compile Include="DBFolder\Class1.cs" />
+    <Compile Include="DBFolder\ConnectionString.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
