--- a/App.config
+++ b/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Hog_Jumper.Properties.Settings.ConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Resources\HogJumperDB.mdb"
+    <add name="Hog_Jumper.Properties.Settings.ConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\HogJumperDB.mdb"
       providerName="System.Data.OleDb" />
   </connectionStrings>
   <startup>
