--- a/Hog_Jumper.csproj
+++ b/Hog_Jumper.csproj
@@ -225,6 +225,7 @@
     <None Include="Resources\Hog2_standing.png" />
     <None Include="Resources\Hog3_standing.png" />
     <None Include="Resources\Hog4_standing.png" />
+    <None Include="Resources\choose.png" />
     <Content Include="Resources\Sound_34393800 1636125459.mp3" />
   </ItemGroup>
   <ItemGroup>
