--- a/Hog_Jumper.csproj
+++ b/Hog_Jumper.csproj
@@ -204,7 +204,6 @@
   <ItemGroup>
     <None Include="Resources\wooden_panel2.png" />
     <None Include="Resources\wooden_panel1.png" />
-    <None Include="Resources\глаз.png" />
     <None Include="Resources\sound_yes1.png" />
     <None Include="Resources\sound_no1.png" />
     <None Include="Resources\7.wav" />
@@ -230,6 +229,8 @@
     <None Include="Resources\choose.png" />
     <None Include="Resources\panel.png" />
     <None Include="Resources\panel1.png" />
+    <None Include="Resources\game_name.png" />
+    <None Include="Resources\eye_open.png" />
     <Content Include="Resources\Sound_34393800 1636125459.mp3" />
   </ItemGroup>
   <ItemGroup>
